Closed
Bug 474365
Opened 17 years ago
Closed 17 years ago
OS/2 breaks: follow-up to Bug 461047 - Replace nsStringArray with nsTArray<nsString>
Categories
(Core :: Widget, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: wuno, Assigned: wuno)
References
Details
Attachments
(1 file)
|
1.93 KB,
patch
|
mozilla
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (OS/2; U; Warp 4.5; en-US; rv:1.9.2a1pre) Gecko/20090120 Minefield/3.2a1pre
Build Identifier:
After checkin for bug461047, OS/2 build breaks in widget/src/os2/nsDeviceContextSpecOS2.cpp
E:/usr/src/hg/mozilla-central/widget/src/os2/nsDeviceContextSpecOS2.cpp: In
member function `nsString* GlobalPrinters::GetStringAt(int)':
E:/usr/src/hg/mozilla-central/widget/src/os2/nsDeviceContextSpecOS2.cpp:86: error: `
StringAt' undeclared (first use this function)
E:/usr/src/hg/mozilla-central/widget/src/os2/nsDeviceContextSpecOS2.cpp:86: error: (Each
undeclared identifier is reported only once for each function it appears
in.)
make.exe[6]: *** [nsDeviceContextSpecOS2.o] Error 1
Reproducible: Always
Steps to Reproduce:
1.
2.
3.
| Assignee | ||
Comment 1•17 years ago
|
||
Peter, this patch includes the same exchange also in the corresponding BeOS file, cause the BeOS build would probably break, too. Do you know a BeOS guy to cc?
Updated•17 years ago
|
Attachment #357740 -
Flags: review?(mozilla) → review+
Comment 2•17 years ago
|
||
Comment on attachment 357740 [details] [diff] [review]
patch - s/StringAt/ElementAt (like in gtk)
Looks good.
Comment 3•17 years ago
|
||
I guess that for mozilla-central BeOS is so broken at this point that this one fix doesn't make a difference. On the other hand I think that the BeOS guys are happy, if we fix it for them. So I am going to push this now.
Updated•17 years ago
|
Component: XPCOM → Widget
QA Contact: xpcom → general
Comment 4•17 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•