[OS/2][BeOS] Bug 474365: unbreak build in widget/src/*/nsDeviceContextSpec*.cpp following bug 461047, r=weilbacher